--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,47 @@ a, a:hover, a:active, a:link, a:visited{
   }
  
 }
+@keyframes fadeInRightLeft {
+ 0%{
+   opacity: 0.5;
+    transform: translateX(400px);
+ }
+
+ 
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+    
+  }
+ 
+}
+@keyframes fadeInRightLeftItemHover {
+ 0%{
+   
+    transform: translateX(0) rotate(0deg);
+    
+ }
+  100% {
+    
+    transform: translateX(-60px) rotate(5deg);
+    
+  }
+ 
+}
+@keyframes fadeInRightLeftItemHoverOut {
+ 0%{
+   
+   transform: translateX(-60px) rotate(5deg);
+   
+  }
+  100% {
+    transform: translateX(0) rotate(0deg);
+    
+    
+  }
+ 
+}
+
 @keyframes leftToRight {
  from{ transform: translateX(-100px); }
  
@@ -205,42 +246,70 @@ to{transform: translateX(0);}
   color: rgb(220, 205, 121);;
 }
 
-.main--works p, h5{
+.main--works p, h5, h2{
   
   text-align: left;
+  
 }
 
 .main--works--list{
-  margin-left: 20px;
+  margin-left: 0rem;
+  padding: 15px 0px 10px 14vw ;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+  /* white-space: nowrap; */
+  overflow: auto;
 
 }
 
-.main--works--item{
-  width: 18rem;
-  min-width: 18rem;
+.main--works--item--first{
+  width: 20rem;
+  min-width: 20rem;
   margin: 20px 30px 20px 10px;
-  border-radius: 0.4rem;
-  box-shadow: 3px 3px 10px 2px  rgba(0, 0, 0, 0.5);
-  border-color:  rgba(0, 0, 0, 0.5);
+  border-radius: 1rem;
+  box-shadow: 0px 0px 0px 0px  rgba(0, 0, 0, 0.9);
+  border-color:  rgba(75, 42, 42, 0);
+  animation: fadeInRightLeftItemHoverOut 0.3s;
+  
+  
   
 }
-
-.main--works--item:hover{
-  width: 18rem;
-  min-width: 18rem;
-  border-radius: 0.4rem;
-  box-shadow: 3px 3px 10px 2px  rgba(0, 0, 0, 0.5);
-  border-color:  rgba(0, 0, 0, 0.5);
-  
-  transform: scale(1.05);
+.main--works--item--next{
+  width: 20rem;
+  min-width: 20rem;
+  margin: 20px 30px 20px -150px;
+  border-radius: 1rem;
+  box-shadow: -30px 0px 20px -20px  rgba(0, 0, 0, 0.7);
+  border-color:  rgba(75, 42, 42, 0);
+  animation: fadeInRightLeftItemHoverOut 0.3s;
 }
 
+
+.main--works--item--first:hover{
+  width: 20rem;
+  min-width: 20rem;
+  border-radius: 1rem;
+  box-shadow: 0px 0px 0px 0px  rgba(0, 0, 0, 0.7);
+  border-color:  rgba(0, 0, 0, 0.5);
+  transform: rotate(5deg);
+  transform: translateX(-60px) rotate(5deg);
+  animation: fadeInRightLeftItemHover 0.3s ease-out
+}
+.main--works--item--next:hover{
+  width: 20rem;
+  min-width: 20rem;
+  border-radius: 1rem;
+  box-shadow: -20px 0px 20px -15px  rgba(0, 0, 0, 0.7);
+  border-color:  rgba(0, 0, 0, 0.5);
+  
+  transform:translateX(-60px) rotate(5deg);
+  animation: fadeInRightLeftItemHover 0.3s ease-out
+
+}
 .work-item-animation{
-  animation: fadeInDownUp 1.5s ease-out;
+  /* animation: fadeInDownUp 1.5s ease-out; */
+  animation: fadeInRightLeftItemHover 0.5s ease-out;
+  animation-direction: reverse;
 }
 
 .work-item-specialText-animation{
@@ -253,28 +322,39 @@ to{transform: translateX(0);}
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  /* background-color: rgb(51, 59, 59); */
+  background-image: linear-gradient(to right, rgb(51, 59, 59), rgb(40, 40, 40));
+  border-radius: 1rem;
   height: 13rem;
   padding: 1.25rem;
-
+  
   
 }
 
 
+.main--works--item--card--body p{
+  margin: 0;
+}
+.main--works--item--card--body h5{
+  margin: 0;
+}
+
 .btn--card{
   display: inline-block;
-    font-weight: 500;
-    text-align: center;
-    vertical-align: middle;
-    -webkit-user-select: none;
-    user-select: none;
-    background-color: transparent;
-    border: 2px solid transparent;
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: .25rem;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-
+  width: 100%;
+  font-weight: 500;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 2px solid transparent;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: .25rem;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  
   background-color: rgb(30, 30, 30);
   border-color: rgb(220, 205, 121);;
 }
@@ -288,6 +368,36 @@ a.btn--card{
   color:rgb(220, 205, 121);
   border-color: rgb(220, 205, 121);
 }
+
+.main--works--item--info--image--list{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.main--works--item--info{
+  
+  background-color: white;
+  
+  margin: 10px 10%;
+  border-radius: 1rem;
+  padding: 30px;
+  color: rgb(27, 25, 25);
+  
+}
+
+.main--works--item--info p{
+  text-align: justify;
+}
+
+.work--item--image--container{
+  margin: 10px 0;
+  
+}
+.work--item--image{
+  width: 500px;
+  border-radius: 15px;
+}
+
 
   
 
@@ -309,14 +419,39 @@ a.btn--card{
 .white--color{
   color: rgb(255, 255, 255);
 }
+.orange--color{
+  color: orange;
+}
+.grey--color{
+  color: lightgray;
+}
 
 .purple--color{
   color: rgb(218, 99, 161);
 }
 
 .footer{
-  height: 50px;
+  padding: 10px 0;
   background-color: rgb(30, 30, 30);
+  color: aliceblue;
 }
 
+@media (max-width : 700px){
+  .work--item--image{
+    width: 100%;
+    border-radius: 0px;
+  }
 
+  .main--works--item--info{
+  
+    background-color: white;
+    border-radius: 0px;
+    margin: 10px 0;
+  }
+
+  .main--works--item--first{
+    
+    margin: 20px 30px 20px 40px;
+  }
+ 
+}
